feat: add jwt authenticate
