# internal/controller/user/user_controller.impl.go
@@ -21,8 +21,10 @@ type UserControllerImpl struct {
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			body	body	web.UserCreateRequest	true	"all fields is require | username field shoud not contains whitespace"
-//	@Success		200	{object}	web.ApiResponse
+//	@Param			body	body		web.UserCreateRequest	true	"all fields is require | username field shoud not contains whitespace"
+//	@Success		200		{object}	web.ApiResponse[web.UserResponse]
+//	@Failure		401	{object}	web.UnAuthorizedErrorResponse
+//	@Failure		500	{object}	web.InternalServerErrorResponse
 //	@Router			/users [post]
 func (controller *UserControllerImpl) Create(write http.ResponseWriter, request *http.Request, params httprouter.Params) {
 
@@ -36,7 +38,7 @@ func (controller *UserControllerImpl) Create(write http.ResponseWriter, request 
 	// passing userRequest into user service method
 	userResponse := controller.UserService.Create(userRequest)
 	// mapping userResponse into ApiResponse
-	apiResponse := web.ApiResponse{
+	apiResponse := web.ApiResponse[web.UserResponse]{
 		Ok:      true,
 		Code:    http.StatusCreated,
 		Message: "Success",
@@ -52,15 +54,17 @@ func (controller *UserControllerImpl) Create(write http.ResponseWriter, request 
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path	int						true	"user id"
-//	@Success		200	{object}	web.ApiResponse
-//	@Failure		404	{object}	web.NotFoundResponse
+//	@Param			id	path		int	true	"user id"
+//	@Success		200	{object}	web.ApiResponse[web.UserResponse]
+//	@Failure		404	{object}	web.NotFoundErrorResponse
+//	@Failure		401	{object}	web.UnAuthorizedErrorResponse
+//	@Failure		500	{object}	web.InternalServerErrorResponse
 //	@Router			/users/{id} [delete]
 func (controller *UserControllerImpl) Delete(write http.ResponseWriter, request *http.Request, params httprouter.Params) {
 	userId := helper.ParamInt(params, "userId")
 
 	controller.UserService.Delete(userId)
-	apiResponse := web.ApiResponse{
+	apiResponse := web.ApiResponse[web.UserResponse]{
 		Ok:      true,
 		Code:    http.StatusOK,
 		Message: "success",
@@ -75,11 +79,13 @@ func (controller *UserControllerImpl) Delete(write http.ResponseWriter, request 
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{object}	web.ApiResponse
+//	@Success		200	{object}	web.ApiResponse[[]web.UserResponse]
+//	@Failure		401	{object}	web.UnAuthorizedErrorResponse
+//	@Failure		500	{object}	web.InternalServerErrorResponse
 //	@Router			/users [get]
 func (controller *UserControllerImpl) FindAll(write http.ResponseWriter, request *http.Request, params httprouter.Params) {
 	usersResponse := controller.UserService.FindAll()
-	apiResponse := web.ApiResponse{
+	apiResponse := web.ApiResponse[[]web.UserResponse]{
 		Ok:      true,
 		Code:    http.StatusOK,
 		Message: "Sucess",
@@ -95,15 +101,17 @@ func (controller *UserControllerImpl) FindAll(write http.ResponseWriter, request
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path	int						true	"user id"
-//	@Success		200	{object}	web.ApiResponse
-//	@Failure		404	{object}	web.NotFoundResponse
+//	@Param			id	path		int	true	"user id"
+//	@Success		200	{object}	web.ApiResponse[web.UserResponse]
+//	@Failure		404	{object}	web.NotFoundErrorResponse
+//	@Failure		401	{object}	web.UnAuthorizedErrorResponse
+//	@Failure		500	{object}	web.InternalServerErrorResponse
 //	@Router			/users/{id} [get]
 func (controller *UserControllerImpl) FindById(write http.ResponseWriter, request *http.Request, params httprouter.Params) {
 	userId := helper.ParamInt(params, "userId")
 
 	userResponse := controller.UserService.FindById(userId)
-	apiResponse := web.ApiResponse{
+	apiResponse := web.ApiResponse[web.UserResponse]{
 		Ok:      true,
 		Code:    http.StatusOK,
 		Message: "Success",
@@ -119,10 +127,12 @@ func (controller *UserControllerImpl) FindById(write http.ResponseWriter, reques
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path	int						true	"user id"
-//	@Param 			body 	body 	web.UserUpdateRequest 	true	"ignore/delete id field on request body"
-//	@Success		200	{object}	web.ApiResponse
-//	@Failure		404	{object}	web.NotFoundResponse
+//	@Param			id		path		int						true	"user id"
+//	@Param			body	body		web.UserUpdateRequest	true	"ignore/delete id field on request body"
+//	@Success		200		{object}	web.ApiResponse[web.UserResponse]
+//	@Failure		404		{object}	web.NotFoundErrorResponse
+//	@Failure		401	{object}	web.UnAuthorizedErrorResponse
+//	@Failure		500	{object}	web.InternalServerErrorResponse
 //	@Router			/users/{id} [put]
 func (controller *UserControllerImpl) Update(write http.ResponseWriter, request *http.Request, params httprouter.Params) {
 	userId := helper.ParamInt(params, "userId")
@@ -139,7 +149,7 @@ func (controller *UserControllerImpl) Update(write http.ResponseWriter, request 
 	// passing userRequest into role service method
 	userResponse := controller.UserService.Update(userRequest)
 	// mapping roleResponse into ApiResponse
-	apiResponse := web.ApiResponse{
+	apiResponse := web.ApiResponse[web.UserResponse]{
 		Ok:      true,
 		Code:    http.StatusCreated,
 		Message: "Success",
