# middleware/auth_middleware.go
@@ -2,26 +2,34 @@ package middleware
 
 import (
 	"net/http"
+	"todo-restful-api/exception"
+	"todo-restful-api/helper"
+
+	"github.com/golang-jwt/jwt/v5"
+	"github.com/julienschmidt/httprouter"
 )
 
-type AuthMiddleware struct {
-	Handler http.Handler
-}
+func Auth(h httprouter.Handle) httprouter.Handle {
+	return func(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+		autorization := r.Header.Get("Authorization")
+		tokenHeader, err := helper.GetToken(autorization)
 
-func NewAuthMiddleware(handler http.Handler) *AuthMiddleware {
-	return &AuthMiddleware{
-		Handler: handler,
+		if err != nil {
+			panic(exception.AuthError{Error: err.Error()})
+		}
+
+		tokenVerified, err := helper.VerifyToken(tokenHeader)
+
+		_, ok := tokenVerified.Claims.(jwt.MapClaims)
+
+		if !ok {
+			panic(exception.AuthError{Error: "Cannot claim token"})
+		}
+
+		if err != nil {
+			panic(exception.AuthError{Error: err.Error()})
+		}
+
+		h(w, r, ps)
 	}
-}
-
-func (middleware *AuthMiddleware) ServeHTTP(writer http.ResponseWriter, request *http.Request) {
-	var (
-	// header = request.Header.Get("Authorization")
-	// token  *string = &strings.Split(header, " ")[1]
-	)
-
-	// fmt.Println(token)
-	middleware.Handler.ServeHTTP(writer, request)
-
-	// jwt decode here
 }
